...
    },
    "Bold": {
      "localizations": {
        "cs": {
          "stringUnit": {
            "state": "translated",
            "value": "Tučně"
          }
        }
      }
    },
    "Bulleted List": {
      "localizations": {
        "cs": {
          "stringUnit": {
            "state": "translated",
            "value": "Odrážkový seznam"
          }
        }
      }
    },
    "Cached input tokens: %lld": {
      "localizations": {
...
    },
    "Done": {
      "localizations": {
        "cs": {
          "stringUnit": {
            "state": "translated",
            "value": "Hotovo"
          }
        }
      }
    },
    "Download": {
      "localizations": {
...
    },
    "Format:": {
      "localizations": {
        "cs": {
          "stringUnit": {
            "state": "translated",
            "value": "Formát:"
          }
        }
      }
    },
    "Front Matter": {
      "localizations": {
...
    },
    "Italic": {
      "localizations": {
        "cs": {
          "stringUnit": {
            "state": "translated",
            "value": "Kurzíva"
          }
        }
      }
    },
    "Keep Mine": {
      "localizations": {
...
            "state": "translated",
            "value": "Přesunout složku „%@“ do koše?"
          }
        }
      }
    },
    "Move to Trash": {
      "localizations": {
        "cs": {
          "stringUnit": {
            "state": "translated",
            "value": "Přesunout do koše"
          }
...
            "state": "translated",
            "value": "Citace"
          }
        }
      }
    },
    "Reading Mode": {
      "localizations": {
        "cs": {
          "stringUnit": {
            "state": "translated",
            "value": "Režim čtení"
          }
        }
      }
    },
    "Refresh": {
      "localizations": {
...
    },
    "Show Status Bar": {
      "localizations": {
        "cs": {
          "stringUnit": {
            "state": "translated",
            "value": "Zobrazit stavový řádek"
          }
        }
      }
    },
    "Show in Finder": {
      "localizations": {
...
